--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "jquery": ">=2",
     "jasmine": "2.0.1",
-    "jasmine-jquery": "2.0.5"
+    "jasmine-jquery": "2.0.5",
+    "Ascensor.js": "git@github.com:gaboesquivel/Ascensor.js.git#teletransportation"
   }
 }
